--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-18 12:14+0100\n"
-"PO-Revision-Date: 2016-11-27 15:36+0100\n"
+"PO-Revision-Date: 2017-07-16 20:26+0200\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: David Cabo <david@civio.es>\n"
 "Language-Team: \n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.2\n"
 
 #: templates/base.html:4 templates/shared/social_sharing.html:5
 msgid "Presupuestos del Gobierno de Aragón"
@@ -27,27 +27,24 @@ msgstr "Información presupuestaria del Ayuntamiento de Eibar"
 
 #: templates/budgets/budgets_intro.html:16
 msgid ""
-"El dinero recaudado localmente se complementa con las transferencias de la Administración "
-"General del Estado y del Gobierno de Aragón, que son los encargados de recaudar otros "
-"ingresos como el IVA y el IRPF"
+"El dinero recaudado localmente se complementa con las transferencias de la Administración General del Estado y del "
+"Gobierno de Aragón, que son los encargados de recaudar otros ingresos como el IVA y el IRPF"
 msgstr ""
-"El dinero recaudado localmente se complementa con las transferencias de la Administración "
-"General del Estado y de la Comunidad de Eibar, que son los encargados de recaudar otros "
-"ingresos como el IVA y el IRPF"
+"El dinero recaudado localmente se complementa con las transferencias de la Diputación Foral, que es la encargada de "
+"recaudar otros ingresos como el IVA y el IRPF"
 
 #: templates/budgets/index.html:17
 msgid "Ingresos y gastos en el Gobierno de Aragón"
 msgstr "Ingresos y gastos en el Ayuntamiento de Eibar"
 
-#: templates/budgets/index.html:127 templates/shared/data_sources.html:7
-#: templates/shared/footer.html:18 templates/shared/header.html:28
-#: templates/shared/header.html.py:61 templates/welcome/index.html:54
+#: templates/budgets/index.html:127 templates/shared/data_sources.html:7 templates/shared/footer.html:18
+#: templates/shared/header.html:28 templates/shared/header.html.py:61 templates/welcome/index.html:54
 msgid "Gobierno de Aragón"
 msgstr "Ayuntamiento de Eibar"
 
 #: templates/shared/data_sources.html:9
 msgid "Datos de inflación (Medias anuales de IPC para Aragón)"
-msgstr "Datos de inflación (Medias anuales de IPC para la Comunidad de Eibar)"
+msgstr "Datos de inflación (Medias anuales del IPC para el País Vasco)"
 
 #: templates/shared/data_sources.html:14
 msgid "Los ingresos y gastos mostrados incluyen únicamente al Gobierno de Aragón"
