--- a/locale/eu/LC_MESSAGES/django.po
+++ b/locale/eu/LC_MESSAGES/django.po
@@ -53,7 +53,7 @@ msgstr "Guztira, <strong id=\"tax-amount-paid\"></strong>(e)ko ekarpena egiten d
 
 #: templates/welcome/index.html:12
 msgid "¿Cómo y en qué gasta el Gobierno de Aragón?"
-msgstr "Nola eta zertan gastatzen du dirua Eibarko Udala?"
+msgstr "Nola eta zertan gastatzen du dirua Eibarko Udalak?"
 
 #: templates/welcome/index.html:42
 msgid "Para que tengas una idea general de los ingresos y gastos del Gobierno de Aragón"
