--- a/locale/eu/LC_MESSAGES/django.po
+++ b/locale/eu/LC_MESSAGES/django.po
@@ -23,7 +23,7 @@ msgstr "Eibarko Udala aurrekontuak"
 
 #
 msgid "Información presupuestaria del Gobierno de Aragón"
-msgstr "Eibarko Udala aurrekontuei buruzko informazioa"
+msgstr "Eibarko Udalaren aurrekontuei buruzko informazioa"
 
 #: templates/budgets/budgets_intro.html:16
 msgid "El dinero recaudado localmente se complementa con las transferencias de la Administración General del Estado y del Gobierno de Aragón, que son los encargados de recaudar otros ingresos como el IVA y el IRPF"
@@ -31,7 +31,7 @@ msgstr "Udalerriek zergen bidez bildutako dirua osatzeko, Gipuzkoako Foru Aldund
 
 #: templates/budgets/index.html:17
 msgid "Ingresos y gastos en el Gobierno de Aragón"
-msgstr "Eibarko Udala diru-sarrerak eta gastuak"
+msgstr "Eibarko Udalaren diru-sarrerak eta gastuak"
 
 #: templates/budgets/index.html:127 templates/shared/data_sources.html:7
 #: templates/shared/footer.html:18 templates/shared/header.html:28
@@ -45,7 +45,7 @@ msgstr "Inflazioaren datuak (Euskal Herrian KPIren urteroko batez bestekoak)"
 
 #: templates/shared/data_sources.html:14
 msgid "Los ingresos y gastos mostrados incluyen únicamente al Gobierno de Aragón"
-msgstr "Erakusten diren diru-sarrerak eta gastuak Eibarko Udala dagozkionak baino ez dira"
+msgstr "Erakusten diren diru-sarrerak eta gastuak Eibarko Udalari dagozkionak baino ez dira"
 
 #: templates/tax_receipt/tax_receipt_form.html:75
 msgid "Contribuyes con un total de <strong id=\"tax-amount-paid\"></strong> a los presupuestos del Gobierno de Aragón"
@@ -57,4 +57,12 @@ msgstr "Nola eta zertan gastatzen du dirua Eibarko Udalak?"
 
 #: templates/welcome/index.html:42
 msgid "Para que tengas una idea general de los ingresos y gastos del Gobierno de Aragón"
-msgstr "Eibarko Udala diru-sarreren eta gastuen ideia orokor bat izan dezazun"
+msgstr "Eibarko Udalaren diru-sarreren eta gastuen ideia orokor bat izan dezazun"
+
+#: templates/budgets/budgets_totals.html:51
+msgid "Cantidades actualizadas con la inflación a fecha 1 de enero de %s."
+msgstr "Inflazioarekin eguneratutako kopuruak, %sko urtarrilaren 1eko datarekin."
+
+#: templates/shared/data_sources.html:15
+msgid "El ajuste de la inflación se realiza a <strong>1 de enero de %s</strong>."
+msgstr "Inflazioaren araberako doikuntza <strong>%sko urtarrilaren 1eko datarekin egiten da</strong>."
